--- a/eCommerce/eCommerce/Views/Supplier/Create.cshtml
+++ b/eCommerce/eCommerce/Views/Supplier/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model eCommerce.Models.Image
+﻿@model eCommerce.Models.Supplier
 
 @{
     ViewBag.Title = "Create";
@@ -6,26 +6,27 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm("Create", "Image",FormMethod.Post,new {enctype="multipart/form-data"} )) {
+@using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>Image</legend>
+        <legend>Supplier</legend>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.ProductID, "Product")
+            @Html.LabelFor(model => model.SuppliersID)
         </div>
         <div class="editor-field">
-            @Html.DropDownList("ProductID", String.Empty)
-            @Html.ValidationMessageFor(model => model.ProductID)
+            @Html.EditorFor(model => model.SuppliersID)
+            @Html.ValidationMessageFor(model => model.SuppliersID)
         </div>
 
         <div class="editor-label">
-          Upload and Image
+            @Html.LabelFor(model => model.Name)
         </div>
         <div class="editor-field">
-      <input type="file" id="upload" name="upload" />
+            @Html.EditorFor(model => model.Name)
+            @Html.ValidationMessageFor(model => model.Name)
         </div>
 
         <div class="editor-label">
